added Data model, route and controllers
